# pyml

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst
docs/source/api/classify/: decision_tree.rst  index.rst  knn.rst  logistic_reg.rst
docs/source/api/cluster/: dbscan.rst  index.rst  kmeans.rst
docs/source/api/linear_model/: index.rst  lasso.rst  linear_regression.rst  logistic_regression.rst  ridge.rst
docs/source/api/neighbors/: index.rst  knn_classifier.rst  knn_regressor.rst
docs/source/api/preprocess/: index.rst  minmax.rst  robust.rst  standard.rst
docs/source/api/regress/: index.rst  knn.rst  lasso.rst  linear_reg.rst  ridge.rst
docs/source/api/tree/: decision_tree.rst  dt_regressor.rst  index.rst
ml_collection/classification/: __init__.py
ml_collection/classification/decision_tree/: dt.py
ml_collection/classification/knn/: knn.py
ml_collection/clustering/: __init__.py
ml_collection/clustering/kmeans/: kmeans.py
ml_collection/errors/: error.py
ml_collection/exception/: __init__.py
ml_collection/regression/knn/: knn.py
ml_collection/regression/linear_regression/: linear_regression.py
ml_collection/supervised/classification/knn/: __init__.py  knn.py
ml_collection/supervised/regression/knn/: __init__.py  knn.py
ml_collection/supervised/regression/linear_regression/: linear_regression.py
ml_collection/unsupervised/clustering/centroid_based/kmeans/: kmeans.py
ml_collection/unsupervised/kmeans/: kmeans.py  kmeans_pp.py
mlkit/: __init__.py
mlkit/classify/: __init__.py
mlkit/classify/decision_tree/: __init__.py  dt.py  node.py
mlkit/classify/knn/: knn.py
mlkit/classify/logistic_reg/: __init__.py  logistic.py
mlkit/cluster/: __init__.py
mlkit/cluster/dbscan/: __init__.py  dbscan.py
mlkit/cluster/kmeans/: kmeans.py  kmeans_pp.py
mlkit/exc/: __init__.py  base.py  notfitted.py
mlkit/preprocess/: __init__.py  scalers.py
mlkit/regress/: __init__.py
mlkit/regress/decision_tree/: dt.py
mlkit/regress/knn/: knn.py
mlkit/regress/lasso/: __init__.py  lasso.py
mlkit/regress/linear_reg/: __init__.py  lr.py
mlkit/regress/ridge/: __init__.py  ridge.py
pyml/: __init__.py  __init__.pyi
pyml/cluster/: __init__.py  __init__.pyi  _kmeans_pp.py  dbscan.py  kmeans.py
pyml/exc/: __init__.py  __init__.pyi  base.py  notfitted.py
pyml/linear_model/: __init__.py  __init__.pyi  _base.py  lasso.py  linear_regression.py  logistic_regression.py  ridge.py
pyml/neighbors/: __init__.py  __init__.pyi  knn_classifier.py  knn_regressor.py
pyml/preprocess/: __init__.py  __init__.pyi  scalers.py
pyml/tree/: __init__.py  __init__.pyi  _node.py  decision_tree.py  dt_classifier.py  dt_regressor.py
tests/: conftest.py
tests/classification/: test_dtclassifier.py  test_knn.py
tests/classify/: test_dtclassifier.py  test_knn.py  test_logistic_reg.py
tests/cluster/: test_dbscan.py  test_kmeans.py
tests/clustering/: test_kmeans.py
tests/clustering/centroid_based/: test_kmeans.py
tests/linear_model/: test_linear_regression.py  test_logistic_regression.py  test_ridge.py
tests/neighbors/: test_knn_classifier.py  test_knn_regressor.py
tests/preprocess/: test_scalers.py
tests/regress/: test_knn.py  test_lasso.py  test_lin_reg.py  test_linear_reg.py  test_ridge.py
tests/regression/: test_knn.py  test_linear_regression.py
tests/supervised/classification/: test_knn.py
tests/supervised/regression/: test_knn.py  test_linear_regression.py
tests/tree/: test_dt_classifier.py  test_dt_regressor.py  test_dtclassifier.py
tests/unsupervised/clustering/centroid_based/: test_kmeans.py
