[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pyml"
version = "0.1.1"
description = "Pure Python Machine Learning - classic algorithms from scratch"
requires-python = ">=3.12"
authors = [
    {name = "Sherzod Juraev"},
    {email = "juraevsherzod9943@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "machine-learning",
    "education",
    "from-scratch"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0"
]

[project.urls]
Homepage = "https://github.com/sherzod-juraev/pyml"
Repository = "https://github.com/sherzod-juraev/pyml"


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-sugar>=1.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "scikit-learn>=1.3.0"
]
docs = [
    "Sphinx>=8.0",
    "furo>=2024.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "myst-parser>=3.0",
    "setuptools_scm"
]


[tool.setuptools.packages.find]
where = ["."]
include = [
    "pyml",
    "pyml.*"
]
exclude = [
    "tests",
    "tests.*",
    "docs",
    "docs.*"
]

[tool.setuptools.package-data]
pyml = [
    "**/*.pyi",
    "py.typed"
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = [
    "tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]
addopts = "-v --tb=short --strict-markers --strict-config -p no:warnings"
filterwarnings = [
    "ignore::UserWarning"
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "docs/source/conf.py",
    "tests"
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
    "D",
    "ARG",
    "RUF",
    "T20",
    "FLY",
    "Q",
    "RSE"
]
ignore = [
    "E501",
    "N803",
    "N806"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
explicit_package_bases = true
check_untyped_defs = true
warn_no_return = true
follow_imports = "silent"
exclude = [
    "tests/",
    "docs/",
    "site-packages"
]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "sklearn.*"
]
ignore_missing_imports = true